// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test CrudBlock component component renders props correctly, falsy values 1`] = `
<li
  className="item"
>
  <h4
    className="itemTitle"
  />
  <div
    className="actionBlock"
  >
    <a
      href=""
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      <button
        className="actionBtn invisibleBtn"
      >
        Redact
      </button>
    </a>
    <a
      href=""
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      <button
        className="actionBtn minBtn visibleBtn"
      >
        <img
          alt="Значок редактирования"
          data-nimg="1"
          decoding="async"
          height={20}
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
          srcSet="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
          style={
            {
              "color": "transparent",
            }
          }
          width={20}
        />
      </button>
    </a>
    <button
      className="actionBtn minBtn"
      onClick={[Function]}
    >
      <img
        alt="Значок очистки"
        data-nimg="1"
        decoding="async"
        height={19}
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
        srcSet="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
        style={
          {
            "color": "transparent",
          }
        }
        width={19}
      />
    </button>
  </div>
</li>
`;

exports[`test CrudBlock component component renders props correctly, truthy values 1`] = `
<li
  className="item"
>
  <h4
    className="itemTitle"
  >
    Name
  </h4>
  <div
    className="actionBlock"
  >
    <a
      href="/foo1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      <button
        className="actionBtn invisibleBtn"
      >
        Redact
      </button>
    </a>
    <a
      href="/foo1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      <button
        className="actionBtn minBtn visibleBtn"
      >
        <img
          alt="Значок редактирования"
          data-nimg="1"
          decoding="async"
          height={20}
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
          srcSet="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
          style={
            {
              "color": "transparent",
            }
          }
          width={20}
        />
      </button>
    </a>
    <button
      className="actionBtn minBtn"
      onClick={[Function]}
    >
      <img
        alt="Значок очистки"
        data-nimg="1"
        decoding="async"
        height={19}
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
        srcSet="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
        style={
          {
            "color": "transparent",
          }
        }
        width={19}
      />
    </button>
  </div>
</li>
`;

exports[`test CrudBlock component there are the buttons 1`] = `
<button
  class="actionBtn invisibleBtn"
>
  Redact
</button>
`;

exports[`test CrudBlock component there are the buttons 2`] = `
<button
  class="actionBtn minBtn visibleBtn"
>
  <img
    alt="Значок редактирования"
    data-nimg="1"
    decoding="async"
    height="20"
    loading="lazy"
    src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
    srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
    style="color: transparent;"
    width="20"
  />
</button>
`;

exports[`test CrudBlock component there are the buttons 3`] = `
<button
  class="actionBtn minBtn"
>
  <img
    alt="Значок очистки"
    data-nimg="1"
    decoding="async"
    height="19"
    loading="lazy"
    src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
    srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
    style="color: transparent;"
    width="19"
  />
</button>
`;
